--- a/ETicaret9307/Eticaret.Common/Eticaret.Common.csproj
+++ b/ETicaret9307/Eticaret.Common/Eticaret.Common.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tool.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
